# ai-makerspace-bootcamp

./: .gitignore
01_Prototyping Best Practices & Vibe Check/: README.md
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
09_Advanced_Retrieval/data/: langsmith-results.md
11_Certification_Challenge/backend/: .env_example  README.md  debug_search.py  docker-compose.yaml  pyproject.toml  requirements.txt  test_complete_pipeline.py  test_pdf_processor.py
11_Certification_Challenge/backend/app/: __init__.py  main.py
11_Certification_Challenge/backend/app/api/routes/: health.py  policies.py  questions.py
11_Certification_Challenge/backend/app/core/: __init__.py  config.py
11_Certification_Challenge/backend/app/models/: __init__.py  schemas.py
11_Certification_Challenge/backend/app/services/: __init__.py  pdf_processor.py  vector_store.py
11_Certification_Challenge/backend/data/norms/: norms_health_de_v1.json
11_Certification_Challenge/backend/data/qdrant/: raft_state.json
11_Certification_Challenge/backend/data/qdrant/collections/norms_health_de_v1/0/: newest_clocks.json
11_Certification_Challenge/backend/data/qdrant/collections/norms_health_de_v1/0/segments/1043fec6-2f50-4386-b270-575b8304c3f1/payload_index/: IDENTITY  LOG  MANIFEST-000005
11_Certification_Challenge/backend/data/qdrant/collections/norms_health_de_v1/0/segments/83e71f84-633f-4ff4-86e7-d731d159761c/payload_index/: IDENTITY  LOG  MANIFEST-000005
11_Certification_Challenge/backend/data/qdrant/collections/norms_health_de_v1/0/segments/c4a2a2d4-5b4c-4139-8867-b1faf3193719/: mutable_id_tracker.mappings
11_Certification_Challenge/backend/data/qdrant/collections/policy_debug_policy_123/0/: newest_clocks.json  replica_state.json
11_Certification_Challenge/backend/data/qdrant/collections/policy_debug_policy_123/0/segments/2057e822-d163-4132-a5c0-7e097c1c560c/: mutable_id_tracker.mappings
11_Certification_Challenge/backend/data/qdrant/collections/policy_debug_policy_123/0/segments/55b33785-cabe-49e3-87b2-9ad03df52583/: mutable_id_tracker.mappings
11_Certification_Challenge/backend/scripts/: index_norms.py
(+60 files in other folders)
