[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurancelens-backend"
version = "0.1.0"
description = "AI assistant for German health insurance policy understanding"
authors = [
    {name = "AI Makerspace", email = "contact@aimakerspace.io"},
]
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # AI/ML Core
    "openai>=1.52.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.30",
    "langsmith>=0.1.134",
    
    # Vector Database & Embeddings
    "qdrant-client>=1.12.0",
    "tiktoken>=0.8.0",
    
    # PDF Processing
    "pypdf>=5.0.0",
    "pymupdf>=1.24.0",
    
    # Web Search
    "tavily-python>=0.5.0",
    
    # Utilities
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    
    # Development
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
